# torch2xxx

./: README.md  warm_up.py
alexnet/: AlexNet.py  dataset.py  trainer.py  training.py
alexnet/trt/: CMakeLists.txt  alexnet.cpp  engine_build.cpp  engine_run.cpp  gen_wts.py
dataset/: README.md
lenet/: LeNet.py  export_testset.py  lenet.pth  trainer.py  training.py
lenet/trt/: CMakeLists.txt  engine_build.cpp  engine_run.cpp  gen_wts.py  lenet.cpp  lenet.txt  lenet.wts
linear_regression/: gen_wts.py  linear_regression.pth  linear_regression.wts  linear_regression_v1.py  linear_regression_v2.py
linear_regression/trt/: CMakeLists.txt  engine_build.cpp  engine_run.cpp  linear.engine  linear_regression.cpp
linear_regression/trt7/: engine_run.cpp  linear.engine  linear_regression.cpp
logic_regression/: gen_wts.py  logic_regression.pth  logic_regression.wts  logic_regression_v1.py  logic_regression_v2.py
logic_regression/trt/: CMakeLists.txt  engine_build.cpp  engine_run.cpp  logic.engine  logic_regression.cpp
mlp/: export_testset.py  gen_wts.py  mlp.pth  mlp.py  mlp.txt  mlp.wts  mlp_bn.pth  mlp_bn.py  mlp_bn.txt  mlp_bn.wts  trainer.py
mlp/trt/: CMakeLists.txt  engine_build.cpp  engine_run.cpp  gen_wts.py  mlp.cpp  mlp.engine
vgg/: VGG.py  dataset.py  evaluation.py  load_pretrained.py  trainer.py  training.py
